--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "watch:sass": "nodemon -e scss -x \"npm run compile:sass\"",
     "devserver": "live-server --browser=firefox",
-    "start": "npm-run-all --parallel devserver watch:sass",
+    "start": "npm-run-all --parallel devserver watch:sass watch:js",
     "compile:sass": "node-sass ./src/sass/main.scss -o ./dist/css/",
-    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" css/style.comp.css -o css/style.prefix.css",
-    "compress:css": "node-sass css/style.prefix.css css/style.css --output-style compressed",
+    "prefix:css": "postcss --use autoprefixer -b \"last 10 versions\" ./dist/css/main.css -o ./src/css/main.prefix.css",
+    "compress:css": "node-sass ./dist/css/main.prefix.css ./dist/css/style.css --output-style compressed",
     "build:css": "npm-run-all compile:sass prefix:css compress:css",
     "watch:js": "parcel watch ./src/js/index.js --out-dir ./dist/js --out-file bundle.js --public-url /js",
-    "build:js": "parcel build ./src/js/index.js --out-dir ./dist/js --out-file bundle.js --public-url /js"
+    "build:js": "parcel build ./src/js/index.js --out-dir ./dist/js --out-file bundle.js --public-url /js",
+    "dev:parcel": "parcel src/index.html",
+    "build:parcel": "parcel build src/index.html"
   },
   "author": "Idris",
   "license": "ISC",
