--- a/package.json
+++ b/package.json
@@ -25,11 +25,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.4",
     "concat": "^1.0.3",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "npm-run-all": "^4.1.5",
-    "parcel-bundler": "^1.12.4",
-    "postcss-cli": "^7.1.1",
     "eslint": "^7.7.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
@@ -38,6 +33,12 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.6",
+    "node-sass": "^4.14.1",
+    "nodemon": "^2.0.4",
+    "npm-run-all": "^4.1.5",
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-svg-sprite": "^1.4.1",
+    "postcss-cli": "^7.1.1",
     "prettier": "^2.0.5"
   }
 }
