--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,6 @@
     //   "sourceType": "module"
     // },
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error", { "argsIgnorePattern": "req|res|next|val|err" }]
+    "no-unused-vars": ["error", { "argsIgnorePattern": "" }]
   }
 }
