--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,10 +13,10 @@
     "no-return-await": "off",
     "no-underscore-dangle": "off",
     "class-methods-use-this": "off",
-    // "parserOptions": {
-    //   "sourceType": "module"
-    // },
     "prefer-destructuring": ["error", { "object": true, "array": false }],
-    "no-unused-vars": ["error"]
+    "no-unused-vars": "error",
+    "parserOptions": {
+      "sourceType": "module"
+    }
   }
 }
